engardens front page

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,1 +1,3 @@
-This is the footer. Include anything you'd like here, like a link to an <a class="internal-link" href="/about">About</a> page.
+Notes? <a href="/notepage">Notes</a>
+<br>
+About? <a href="{% link _notes/metagardening.md %}">Kinda</a>
