--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,3 @@
-Notes? <a href="/notepage">Notes</a>
+Notes? <a href="/notecloud">Notes</a>
 <br>
 About? <a href="{% link _notes/metagardening.md %}">Kinda</a>
