--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,3 @@
-Notes? <a href="/notecloud">Notes</a>
+Notes? <a class="internal-link" href="/notecloud">Notes</a>
 <br>
-About? <a href="{% link _notes/metagardening.md %}">Kinda</a>
+About? <a class="internal-link" href="{% link _notes/metagardening.md %}">Kinda</a>
