adds clamber, books, moar

--- a/_layouts/tag-list.html
+++ b/_layouts/tag-list.html
@@ -17,7 +17,7 @@ metaanotherthing:
     <content>
       {{ content }}
       <hr>
-      <div class="garden" style="width: 90%; display: grid; grid-gap: 1em; grid-template-columns: repeat(10, auto);">
+      <div class="stuff-list" style="width: 90%; display: grid; grid-gap: 1em; grid-template-columns: repeat(10, auto);">
 
       {% assign t = page.title | downcase %}
       <h3>Feeds</h3>
