--- a/_layouts/bucket-gallery.html
+++ b/_layouts/bucket-gallery.html
@@ -4,7 +4,7 @@ metasomething:
 metaanotherthing:
 ---
 {% include floopdashes.html stroke = page.color  %}
-{% include page_hilight.html hilight = page.color parent=".gallery" %}
+{% include page_hilight.html hilight = page.color parent="body" %}
 <article>
 
   <div id="notes-entry-container" class="gallery">
@@ -13,7 +13,7 @@ metaanotherthing:
       <h1 class="page_hilight">{{ page.title }}</h1>
 
       <main class="page_hilight_bg">
-        <div class="desaturate">
+        <div class="desaturate content page_hilight">
         {{ content }}
       </main>
       <div class="img_grid">
@@ -21,8 +21,8 @@ metaanotherthing:
         {% for post in site.galleries %}
           {% if post.gallery contains g %}
           <div class="img" >
-            <a href="{{ post.url }}" target="_blank" title="{{ post.title }}"><caption>{{ post.title }}</caption></a>
-            <a href="{{ post.url }}" target="_blank" title="{{ post.title }}"><img class="page_hilight" src="/{{ post.link }}"></a>
+            <a href="{{ post.url }}" target="_blank" title="{{ post.title }}" class="internal-link image-title"><caption>{{ post.title }}</caption></a>
+            <a href="{{ post.url }}" target="_blank" title="{{ post.title }}" class="internal-link"><img class="page_hilight" src="/{{ post.link }}"></a>
           </div>
           {% endif %}
         {% endfor %}
@@ -32,12 +32,8 @@ metaanotherthing:
 
     </content>
     <side style="font-size: 0.9em;">
-      <div class="overlay">
-        
-    <nav>{% include nav.html %}</nav>
-    <div>
-      <a href="/notecloud">All Notes</a>
-    </div>
+      <div class="overlay page_hilight">
+
 
      <time datetime="{{ page.last_modified_at | date_to_xmlschema }}">{% if page.type != 'pages' %}
       Last updated on {{ page.last_modified_at | date: "%B %-d, %Y" }}
