--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -162,6 +162,9 @@ body.home {
     grid-template-columns: repeat(25, 1fr);
     width: 100vw;
     background-color: #3abe41;
+    @media (max-width: 900px) {
+      grid-template-columns: repeat(10, 1fr);
+    }
     a {
       &.internal-link {
         border: none;
@@ -170,6 +173,10 @@ body.home {
       &.garden-grid {
         width: 4vw;
         height: 4vw;
+        @media (max-width: 900px) {
+          width: 10vw;
+          height: 10vw;
+        }
         background-size: contain;
         background-repeat: no-repeat;
         background-image: url(/images/grass2.png);
@@ -185,6 +192,13 @@ body.home {
           display: block;
           background-size: contain;
           background-repeat: no-repeat;
+          @media (max-width: 900px) {
+            width: 6vw;
+            height: 6vw;
+            padding: 2vw;
+            margin: 2vw;
+          }
+
 
         }
 
@@ -192,8 +206,6 @@ body.home {
       &.garden-sprite {
         i {
           background-image: url(/images/talkingweed.gif);
-          height: auto;
-          width: 75%;
         }
       }
       &.garden-feed {
@@ -205,6 +217,10 @@ body.home {
         &.astronomy-picture-of-the-day i {
           background-image: url(/images/apod-plant.png);
         }
+        &.public-domain-review i {
+          background-image: url(/images/pdr-plant.png);
+        }
+
         // background: url(/images/grass.png) ;
 
         img {
