--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -181,8 +181,8 @@ body.home {
         background-repeat: no-repeat;
         background-image: url(/images/grass2.png);
         &:hover {
-          padding-top: 7px;
-          padding-left: 4px;
+          padding-bottom: 7px;
+          padding-right: 4px;
         }
         i {
           width: 2vw;
