test plunk of AI art essay cloud

--- a/_includes/page_hilight.html
+++ b/_includes/page_hilight.html
@@ -11,5 +11,11 @@
 			background-color: {{ hilight }} !important;
 		}
 
+		body {
+			--block-shadow-color: {{ hilight }} !important;
+			--block-text-color: {{ hilight }} !important;
+
+		}
+
 	</style>
 {% endif %}
